docs : update changes in documents

--- a/docs/components/Header.html
+++ b/docs/components/Header.html
@@ -173,7 +173,6 @@
                 <td class="col-md-9">
                             <code>CommonModule</code>
                             <code>RouterLink</code>
-                            <code>RouterLinkActive</code>
                                 <code><a href="../components/ConfirmLogout.html" target="_self" >ConfirmLogout</a></code>
                 </td>
             </tr>
@@ -210,6 +209,12 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
+                                <a href="#email" >email</a>
+                            </li>
+                            <li>
+                                <a href="#showAccount" >showAccount</a>
+                            </li>
+                            <li>
                                 <a href="#showLogout" >showLogout</a>
                             </li>
                         </ul>
@@ -232,6 +237,9 @@
                             </li>
                             <li>
                                 <a href="#openLogout" >openLogout</a>
+                            </li>
+                            <li>
+                                <a href="#popout" >popout</a>
                             </li>
                         </ul>
                     </td>
@@ -256,7 +264,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/shared/components/header/header.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/shared/components/header/header.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -335,8 +343,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="19"
-                                    class="link-to-prism">src/app/shared/components/header/header.ts:19</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="21"
+                                    class="link-to-prism">src/app/shared/components/header/header.ts:21</a></div>
                         </td>
                     </tr>
 
@@ -372,8 +380,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="20"
-                                    class="link-to-prism">src/app/shared/components/header/header.ts:20</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="22"
+                                    class="link-to-prism">src/app/shared/components/header/header.ts:22</a></div>
                         </td>
                     </tr>
 
@@ -409,8 +417,45 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="18"
-                                    class="link-to-prism">src/app/shared/components/header/header.ts:18</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="20"
+                                    class="link-to-prism">src/app/shared/components/header/header.ts:20</a></div>
+                        </td>
+                    </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                        <div class="io-description">
+                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                        </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="popout"></a>
+                    <span class="name">
+                        <span ><b>popout</b></span>
+                        <a href="#popout"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>popout()</code>
+                </td>
+            </tr>
+
+
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-line">Defined in <a href="" data-line="28"
+                                    class="link-to-prism">src/app/shared/components/header/header.ts:28</a></div>
                         </td>
                     </tr>
 
@@ -432,6 +477,56 @@
     <h3 id="inputs">
         Properties
     </h3>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="email"></a>
+                    <span class="name">
+                        <span ><b>email</b></span>
+                        <a href="#email"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>signal(localStorage.getItem(&quot;userEmail&quot;))</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/shared/components/header/header.ts:16</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="showAccount"></a>
+                    <span class="name">
+                        <span ><b>showAccount</b></span>
+                        <a href="#showAccount"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>signal(false)</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/shared/components/header/header.ts:15</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
     <table class="table table-sm table-bordered">
         <tbody>
             <tr>
@@ -464,7 +559,7 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, signal } from &#x27;@angular/core&#x27;;
-import { RouterLink, RouterLinkActive, Router } from &#x27;@angular/router&#x27;;
+import { RouterLink, Router } from &#x27;@angular/router&#x27;;
 import { CommonModule } from &#x27;@angular/common&#x27;;
 import { ConfirmLogout } from &#x27;../confirm-logout/confirm-logout&#x27;;
 import { AuthService } from &#x27;../../../core/services/auth.service&#x27;;
@@ -472,11 +567,13 @@ import { AuthService } from &#x27;../../../core/services/auth.service&#x27;;
 @Component({
   selector: &#x27;app-header&#x27;,
   standalone: true,
-  imports: [CommonModule, RouterLink, RouterLinkActive, ConfirmLogout],
+  imports: [CommonModule, RouterLink, ConfirmLogout],
   templateUrl: &#x27;./header.html&#x27;
 })
 export class Header {
   showLogout &#x3D; signal(false);
+  showAccount &#x3D; signal(false);
+  email &#x3D; signal(localStorage.getItem(&quot;userEmail&quot;));
 
   constructor(private auth: AuthService, private router: Router) {}
 
@@ -485,13 +582,17 @@ export class Header {
   confirmLogout() {
     this.auth.logout();
     this.showLogout.set(false);
-    this.router.navigateByUrl(&#x27;/login&#x27;);
+    this.router.navigateByUrl(&#x27;/&#x27;);
+  }
+
+  popout() {
+    this.showAccount.set(!this.showAccount());
   }
 }</code></pre>
     </div>
 
     <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;header class&#x3D;&quot;flex flex-row justify-between items-center m-8 bg-white shadow&quot;&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;header class&#x3D;&quot;flex flex-row justify-between items-center m-8&quot;&gt;
   &lt;!-- Left: logo + title (styling follows first block) --&gt;
   &lt;a routerLink&#x3D;&quot;/&quot; class&#x3D;&quot;flex flex-row mx-8 items-center no-underline&quot;&gt;
     &lt;img src&#x3D;&quot;images/logo-coloured.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
@@ -500,26 +601,35 @@ export class Header {
 
   &lt;!-- Center / Right: nav + actions --&gt;
   &lt;div class&#x3D;&quot;flex flex-row items-center mx-8 space-x-6&quot;&gt;
-    &lt;!-- Nav Links (hidden on small screens like original) --&gt;
-    &lt;nav class&#x3D;&quot;space-x-6 text-gray-600 hidden md:flex&quot;&gt;
-      &lt;a routerLink&#x3D;&quot;/&quot; routerLinkActive&#x3D;&quot;text-gray-900&quot; [routerLinkActiveOptions]&#x3D;&quot;{ exact: true }&quot; class&#x3D;&quot;hover:text-gray-900&quot;&gt;Home&lt;/a&gt;
-      &lt;a routerLink&#x3D;&quot;/dashboard&quot; routerLinkActive&#x3D;&quot;text-gray-900&quot; class&#x3D;&quot;hover:text-gray-900&quot;&gt;Dashboard&lt;/a&gt;
-      &lt;a routerLink&#x3D;&quot;/dashboard/subscription&quot; routerLinkActive&#x3D;&quot;text-gray-900&quot; class&#x3D;&quot;hover:text-gray-900&quot;&gt;Subscription&lt;/a&gt;
-    &lt;/nav&gt;
-
     &lt;!-- Actions: Logout button + profile image --&gt;
-    &lt;div class&#x3D;&quot;flex items-center space-x-4&quot;&gt;
-      &lt;button
-        class&#x3D;&quot;px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600&quot;
-        (click)&#x3D;&quot;openLogout()&quot;
-      &gt;
-        Logout
-      &lt;/button&gt;
-
-      &lt;img src&#x3D;&quot;images/profile-img.png&quot; alt&#x3D;&quot;Profile&quot; class&#x3D;&quot;w-12&quot;&gt;
-    &lt;/div&gt;
   &lt;/div&gt;
+  &lt;button
+    class&#x3D;&quot;rounded-full p-1 hover:bg-gray-100&quot;
+    (click)&#x3D;&quot;popout()&quot;
+  &gt;
+    &lt;img src&#x3D;&quot;images/profile-icon.svg&quot; alt&#x3D;&quot;Profile&quot; class&#x3D;&quot;w-12&quot;&gt;
+  &lt;/button&gt;
 &lt;/header&gt;
+
+&lt;!-- Account Menu --&gt;
+@if (showAccount()) {
+  &lt;div class&#x3D;&quot;absolute top-24 right-8 flex flex-col items-start p-2 rounded-md text-gray-500 bg-white shadow&quot;&gt;
+    &lt;div class&#x3D;&quot;flex flex-row items-center my-1 mr-8&quot;&gt;
+      &lt;img src&#x3D;&quot;images/profile-icon.svg&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-6 mr-2&quot;&gt;
+      &lt;div&gt;
+        &lt;h3&gt;Account&lt;/h3&gt;
+        &lt;span class&#x3D;&quot;text-sm font-light&quot;&gt;{{email()}}&lt;/span&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;button
+      class&#x3D;&quot;flex flex-row items-center my-1 w-full hover:bg-gray-100&quot;
+      (click)&#x3D;&quot;openLogout()&quot;
+    &gt;
+      &lt;img src&#x3D;&quot;images/logout-icon.svg&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-6 m-1&quot;&gt;
+      Logout
+    &lt;/button&gt;
+  &lt;/div&gt;
+}
 
 &lt;!-- Confirm logout modal / component (Angular) --&gt;
 &lt;app-confirm-logout
@@ -555,8 +665,8 @@ export class Header {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><header class="flex flex-row justify-between items-center m-8 bg-white shadow">  <!-- Left: logo + title (styling follows first block) -->  <a routerLink="/" class="flex flex-row mx-8 items-center no-underline">    <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">    <span class="text-2xl h-max text-prussian-blue-900 font-serif">Maestro</span>  </a>  <!-- Center / Right: nav + actions -->  <div class="flex flex-row items-center mx-8 space-x-6">    <!-- Nav Links (hidden on small screens like original) -->    <nav class="space-x-6 text-gray-600 hidden md:flex">      <a routerLink="/" routerLinkActive="text-gray-900" [routerLinkActiveOptions]="{ exact: true }" class="hover:text-gray-900">Home</a>      <a routerLink="/dashboard" routerLinkActive="text-gray-900" class="hover:text-gray-900">Dashboard</a>      <a routerLink="/dashboard/subscription" routerLinkActive="text-gray-900" class="hover:text-gray-900">Subscription</a>    </nav>    <!-- Actions: Logout button + profile image -->    <div class="flex items-center space-x-4">      <button        class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600"        (click)="openLogout()"      >        Logout      </button>      <img src="images/profile-img.png" alt="Profile" class="w-12">    </div>  </div></header><!-- Confirm logout modal / component (Angular) --><app-confirm-logout  *ngIf="showLogout()"  (cancel)="cancelLogout()"  (confirm)="confirmLogout()"></app-confirm-logout></div>'
-    var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><header class="flex flex-row justify-between items-center m-8">  <!-- Left: logo + title (styling follows first block) -->  <a routerLink="/" class="flex flex-row mx-8 items-center no-underline">    <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">    <span class="text-2xl h-max text-prussian-blue-900 font-serif">Maestro</span>  </a>  <!-- Center / Right: nav + actions -->  <div class="flex flex-row items-center mx-8 space-x-6">    <!-- Actions: Logout button + profile image -->  </div>  <button    class="rounded-full p-1 hover:bg-gray-100"    (click)="popout()"  >    <img src="images/profile-icon.svg" alt="Profile" class="w-12">  </button></header><!-- Account Menu -->@if (showAccount()) {  <div class="absolute top-24 right-8 flex flex-col items-start p-2 rounded-md text-gray-500 bg-white shadow">    <div class="flex flex-row items-center my-1 mr-8">      <img src="images/profile-icon.svg" alt="" class="w-6 mr-2">      <div>        <h3>Account</h3>        <span class="text-sm font-light">{{email()}}</span>      </div>    </div>    <button      class="flex flex-row items-center my-1 w-full hover:bg-gray-100"      (click)="openLogout()"    >      <img src="images/logout-icon.svg" alt="" class="w-6 m-1">      Logout    </button>  </div>}<!-- Confirm logout modal / component (Angular) --><app-confirm-logout  *ngIf="showLogout()"  (cancel)="cancelLogout()"  (confirm)="confirmLogout()"></app-confirm-logout></div>'
+    var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Header'};
 </script>
