--- a/docs/components/Contact.html
+++ b/docs/components/Contact.html
@@ -188,19 +188,205 @@
     </table>
 </section>
 
+    <section data-compodoc="block-index">
+    <h3 id="index">Index</h3>
+    <table class="table table-sm table-bordered index-table">
+        <tbody>
+
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Methods</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#onFeaturesClick" >onFeaturesClick</a>
+                            </li>
+                            <li>
+                                <a href="#onHomeClick" >onHomeClick</a>
+                            </li>
+                            <li>
+                                <a href="#onPricingClick" >onPricingClick</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Outputs</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#navigateSection" >navigateSection</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
 
 
+        </tbody>
+    </table>
+</section>
 
 
 
+    <section data-compodoc="block-outputs">
+    <h3 id="outputs">Outputs</h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="navigateSection"></a>
+                        <b>navigateSection</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>EventEmitter</code>
 
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/pages/home/contact/contact.ts:10</a></div>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
+
+
+    <section data-compodoc="block-methods">
+    
+    <h3 id="methods">
+        Methods
+    </h3>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="onFeaturesClick"></a>
+                    <span class="name">
+                        <span ><b>onFeaturesClick</b></span>
+                        <a href="#onFeaturesClick"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>onFeaturesClick()</code>
+                </td>
+            </tr>
+
+
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-line">Defined in <a href="" data-line="16"
+                                    class="link-to-prism">src/app/pages/home/contact/contact.ts:16</a></div>
+                        </td>
+                    </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                        <div class="io-description">
+                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                        </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="onHomeClick"></a>
+                    <span class="name">
+                        <span ><b>onHomeClick</b></span>
+                        <a href="#onHomeClick"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>onHomeClick()</code>
+                </td>
+            </tr>
+
+
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-line">Defined in <a href="" data-line="12"
+                                    class="link-to-prism">src/app/pages/home/contact/contact.ts:12</a></div>
+                        </td>
+                    </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                        <div class="io-description">
+                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                        </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="onPricingClick"></a>
+                    <span class="name">
+                        <span ><b>onPricingClick</b></span>
+                        <a href="#onPricingClick"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>onPricingClick()</code>
+                </td>
+            </tr>
+
+
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-line">Defined in <a href="" data-line="20"
+                                    class="link-to-prism">src/app/pages/home/contact/contact.ts:20</a></div>
+                        </td>
+                    </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                        <div class="io-description">
+                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                        </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, EventEmitter, Output } from &#x27;@angular/core&#x27;;
 
 @Component({
   selector: &#x27;app-contact&#x27;,
@@ -209,7 +395,19 @@
   styleUrl: &#x27;./contact.css&#x27;
 })
 export class Contact {
+  @Output() navigateSection &#x3D; new EventEmitter&lt;&#x27;top&#x27; | &#x27;features&#x27; | &#x27;pricing&#x27; | &#x27;contact&#x27;&gt;();
 
+  onHomeClick() {
+    this.navigateSection.emit(&#x27;top&#x27;);
+  }
+
+  onFeaturesClick() {
+    this.navigateSection.emit(&#x27;features&#x27;);
+  }
+
+  onPricingClick() {
+    this.navigateSection.emit(&#x27;pricing&#x27;);
+  }
 }
 </code></pre>
     </div>
@@ -244,13 +442,13 @@ export class Contact {
           &lt;h3 class&#x3D;&quot;mb-4 text-xl font-medium text-[#EAAA08]&quot;&gt;Quick Links&lt;/h3&gt;
           &lt;ul class&#x3D;&quot;space-y-3 text-base text-gray-300&quot;&gt;
             &lt;li&gt;
-              &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;hover:text-white&quot;&gt;Home&lt;/a&gt;
+              &lt;a (click)&#x3D;&quot;onHomeClick()&quot; class&#x3D;&quot;hover:text-white cursor-pointer&quot;&gt;Home&lt;/a&gt;
             &lt;/li&gt;
             &lt;li&gt;
-              &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;hover:text-white&quot;&gt;Features&lt;/a&gt;
+              &lt;a (click)&#x3D;&quot;onFeaturesClick()&quot; class&#x3D;&quot;hover:text-white cursor-pointer&quot;&gt;Features&lt;/a&gt;
             &lt;/li&gt;
             &lt;li&gt;
-              &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;hover:text-white&quot;&gt;Pricing&lt;/a&gt;
+              &lt;a (click)&#x3D;&quot;onPricingClick()&quot; class&#x3D;&quot;hover:text-white cursor-pointer&quot;&gt;Pricing&lt;/a&gt;
             &lt;/li&gt;
           &lt;/ul&gt;
         &lt;/div&gt;
@@ -260,8 +458,8 @@ export class Contact {
             Contact Information
           &lt;/h3&gt;
           &lt;p class&#x3D;&quot;flex items-center space-x-2 text-base text-gray-300&quot;&gt;
-            &lt;img src&#x3D;&quot;images/EnvelopeSimple.png&quot; /&gt;
-            &lt;span&gt;info@maestro.org&lt;/span&gt;
+            &lt;img src&#x3D;&quot;images/EnvelopeSimple.svg&quot; /&gt;
+            &lt;span&gt;maestroaidevs@gmail.com&lt;/span&gt;
           &lt;/p&gt;
         &lt;/div&gt;
       &lt;/div&gt;
@@ -279,14 +477,14 @@ export class Contact {
       &lt;/p&gt;
       &lt;!-- sm icons--&gt;
       &lt;div class&#x3D;&quot;flex space-x-4&quot;&gt;
-        &lt;a href&#x3D;&quot;#&quot; target&#x3D;&quot;_blank&quot;&gt;
-          &lt;img src&#x3D;&quot;images/linkedin.png&quot; alt&#x3D;&quot;linkedin icon&quot; /&gt;
+        &lt;a href&#x3D;&quot;https://www.linkedin.com/&quot; target&#x3D;&quot;_blank&quot;&gt;
+          &lt;img src&#x3D;&quot;images/linkedin.svg&quot; alt&#x3D;&quot;linkedin icon&quot; /&gt;
         &lt;/a&gt;
-        &lt;a href&#x3D;&quot;#&quot; target&#x3D;&quot;_blank&quot;&gt;
-          &lt;img src&#x3D;&quot;images/facebook.png&quot; alt&#x3D;&quot;facebook icon&quot; /&gt;
+        &lt;a href&#x3D;&quot;https://www.facebook.com/&quot; target&#x3D;&quot;_blank&quot;&gt;
+          &lt;img src&#x3D;&quot;images/facebook.svg&quot; alt&#x3D;&quot;facebook icon&quot; /&gt;
         &lt;/a&gt;
-        &lt;a href&#x3D;&quot;#&quot; target&#x3D;&quot;_blank&quot;&gt;
-          &lt;img src&#x3D;&quot;images/insta.png&quot; alt&#x3D;&quot;instagram icon&quot; /&gt;
+        &lt;a href&#x3D;&quot;https://www.instagram.com/&quot; target&#x3D;&quot;_blank&quot;&gt;
+          &lt;img src&#x3D;&quot;images/instagram.svg&quot; alt&#x3D;&quot;instagram icon&quot; /&gt;
         &lt;/a&gt;
       &lt;/div&gt;
     &lt;/div&gt;
@@ -321,8 +519,8 @@ export class Contact {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!-- Main Footer Container--><footer class="bg-[#002D4B] py-20 text-white">  <!-- wrapper to make it look good -->  <div class="container mx-auto px-4 lg:px-8">    <!-- div for footer elements-->    <div      class="flex flex-col items-start justify-between gap-12 md:flex-row md:items-start"    >      <!-- Div for logo, header-->      <div class="mb-8 px-4 py-4 md:mb-0">        <div class="flex items-center gap-2">          <div class="h-auto w-[63px] flex-shrink-0">            <img src="images/logo-coloured.svg" alt="Maestro Logo Icon" />          </div>          <h2 class="font-serif text-7xl font-bold leading-tight text-white">            Maestro          </h2>        </div>        <p class="mt-2 text-2xl text-gray-400">          Your Personalized Learning Companion        </p>      </div>      <!-- Quick links/Contact Info -->      <div class="flex flex-col md:flex-row md:space-x-24">        <div class="flex-grow">          <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">Quick Links</h3>          <ul class="space-y-3 text-base text-gray-300">            <li>              <a href="#" class="hover:text-white">Home</a>            </li>            <li>              <a href="#" class="hover:text-white">Features</a>            </li>            <li>              <a href="#" class="hover:text-white">Pricing</a>            </li>          </ul>        </div>        <div class="flex-grow">          <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">            Contact Information          </h3>          <p class="flex items-center space-x-2 text-base text-gray-300">            <img src="images/EnvelopeSimple.png" />            <span>info@maestro.org</span>          </p>        </div>      </div>    </div>    <!-- Line-->    <hr class="my-12 border-t border-gray-700" />    <!-- Copyright and Social Media Links (Bottom of Footer) -->    <div      class="flex flex-col items-center justify-between gap-8 md:flex-row md:items-end"    >      <p class="text-xl text-gray-500">        &copy; 2025 Maestro. All rights reserved.      </p>      <!-- sm icons-->      <div class="flex space-x-4">        <a href="#" target="_blank">          <img src="images/linkedin.png" alt="linkedin icon" />        </a>        <a href="#" target="_blank">          <img src="images/facebook.png" alt="facebook icon" />        </a>        <a href="#" target="_blank">          <img src="images/insta.png" alt="instagram icon" />        </a>      </div>    </div>  </div></footer></div>'
-    var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><!-- Main Footer Container--><footer class="bg-[#002D4B] py-20 text-white">  <!-- wrapper to make it look good -->  <div class="container mx-auto px-4 lg:px-8">    <!-- div for footer elements-->    <div      class="flex flex-col items-start justify-between gap-12 md:flex-row md:items-start"    >      <!-- Div for logo, header-->      <div class="mb-8 px-4 py-4 md:mb-0">        <div class="flex items-center gap-2">          <div class="h-auto w-[63px] flex-shrink-0">            <img src="images/logo-coloured.svg" alt="Maestro Logo Icon" />          </div>          <h2 class="font-serif text-7xl font-bold leading-tight text-white">            Maestro          </h2>        </div>        <p class="mt-2 text-2xl text-gray-400">          Your Personalized Learning Companion        </p>      </div>      <!-- Quick links/Contact Info -->      <div class="flex flex-col md:flex-row md:space-x-24">        <div class="flex-grow">          <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">Quick Links</h3>          <ul class="space-y-3 text-base text-gray-300">            <li>              <a (click)="onHomeClick()" class="hover:text-white cursor-pointer">Home</a>            </li>            <li>              <a (click)="onFeaturesClick()" class="hover:text-white cursor-pointer">Features</a>            </li>            <li>              <a (click)="onPricingClick()" class="hover:text-white cursor-pointer">Pricing</a>            </li>          </ul>        </div>        <div class="flex-grow">          <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">            Contact Information          </h3>          <p class="flex items-center space-x-2 text-base text-gray-300">            <img src="images/EnvelopeSimple.svg" />            <span>maestroaidevs@gmail.com</span>          </p>        </div>      </div>    </div>    <!-- Line-->    <hr class="my-12 border-t border-gray-700" />    <!-- Copyright and Social Media Links (Bottom of Footer) -->    <div      class="flex flex-col items-center justify-between gap-8 md:flex-row md:items-end"    >      <p class="text-xl text-gray-500">        &copy; 2025 Maestro. All rights reserved.      </p>      <!-- sm icons-->      <div class="flex space-x-4">        <a href="https://www.linkedin.com/" target="_blank">          <img src="images/linkedin.svg" alt="linkedin icon" />        </a>        <a href="https://www.facebook.com/" target="_blank">          <img src="images/facebook.svg" alt="facebook icon" />        </a>        <a href="https://www.instagram.com/" target="_blank">          <img src="images/instagram.svg" alt="instagram icon" />        </a>      </div>    </div>  </div></footer></div>'
+    var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Contact'};
 </script>
