--- a/docs/components/TopicPreferences.html
+++ b/docs/components/TopicPreferences.html
@@ -916,27 +916,32 @@ export class TopicPreferences implements OnInit {
     this.subjectService.selectTopics(this.subjectId, selectedTopics.map((topic) &#x3D;&gt; topic.id)).subscribe({
       next: (response) &#x3D;&gt; {
         console.log(&quot;Topics selected:&quot;, response);
-
+        
         // Generate lesson
         this.subjectService.generateLesson(this.subjectId, this.learningStyle).subscribe({
           next: (response) &#x3D;&gt; {
             console.log(&quot;Lesson generated:&quot;, response);
+            this.notify.showSuccess(&quot;Successfully generated lesson.&quot;)
             this.router.navigate([&#x60;/subject-create/${this.subjectId}/question-settings&#x60;])
             this.loading &#x3D; false;
           },
 
           error: (err) &#x3D;&gt; {
+            this.loading &#x3D; false;
             console.error(&#x27;Error generating lesson:&#x27;, err);
             this.notify.showError(&quot;Failed to generate lesson. Please try again later.&quot;);
             this.loading &#x3D; false;
+            this.cdr.detectChanges();
           }
         });
       },
       
       error: (err) &#x3D;&gt; {
+        this.loading &#x3D; false;
         console.error(&#x27;Error selecting topics:&#x27;, err);
         this.notify.showError(&quot;Failed to select topics. Please try again later.&quot;);
         this.loading &#x3D; false;
+        this.cdr.detectChanges();
       }
     });
   }
@@ -1012,15 +1017,21 @@ export class TopicPreferences implements OnInit {
         &lt;span&gt;Learning Style is required&lt;/span&gt;
       &lt;/div&gt;
     }
-    &lt;button
-      type&#x3D;&quot;submit&quot; 
-      class&#x3D;&quot;w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm my-4&quot; 
-      (click)&#x3D;&quot;onSubmit()&quot;
-      [disabled]&#x3D;&quot;loading&quot;
-    &gt;
-      Next
-      &lt;img src&#x3D;&quot;images/next-icon.svg&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-3 ml-2&quot;&gt;
-    &lt;/button&gt;
+    &lt;div class&#x3D;&quot;flex flex-row items-center&quot;&gt;
+      &lt;button
+        type&#x3D;&quot;submit&quot; 
+        class&#x3D;&quot;w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm my-4&quot; 
+        (click)&#x3D;&quot;onSubmit()&quot;
+        [disabled]&#x3D;&quot;loading&quot;
+      &gt;
+        Next
+        &lt;img src&#x3D;&quot;images/next-icon.svg&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-3 ml-2&quot;&gt;
+      &lt;/button&gt;
+      &lt;div [class]&#x3D;&quot;&#x60;flex flex-row items-center ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
+        &lt;img src&#x3D;&quot;images/spinner.gif&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-8 h-8 mx-2&quot;&gt;
+        loading...
+      &lt;/div&gt;
+    &lt;/div&gt;
   &lt;/form&gt;
 &lt;/div&gt;
 </code></pre>
@@ -1052,8 +1063,8 @@ export class TopicPreferences implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><app-header></app-header><div class="flex flex-col w-full px-32">  <!-- Creation Tab Header -->  <div class="flex flex-row mb-8">    <app-creation-step-tab      [text]="\'My Subject and Materials\'"      [icon]="\'images/subject-icon.svg\'"      [active]="true"      class="w-2/6"    />    <app-creation-step-tab      [text]="\'Lesson Content Generation\'"      [icon]="\'images/lesson-generation-icon.svg\'"      [active]="true"      class="w-2/6"    />    <app-creation-step-tab      [text]="\'Practice Question Generation\'"      [icon]="\'images/question-generation-icon.svg\'"      [active]="false"      class="w-2/6"    />  </div>  <h1 class="text-2xl mb-2 font-medium">Create Your Personalized Lesson</h1>  <p class="mb-4 text-gray-600">    Select the specific topics from your document that you want Maestro to focus on for your lesson.  </p>  <!-- Topic List -->  <div class="flex flex-row flex-wrap mb-16">    @for (topic of topics; track topic.id) {      <button        [class]="\'flex flex-row rounded-full py-4 px-6 text-sm text-white mx-2 my-1 transition duration-300 ease-in-out \' + ( topic.selected? \'bg-prussian-blue-900\' : \'bg-gray-500\')"        (click)="toggleTopicSelection(topic.id)"        [disabled]="loading"      >        @if (topic.selected) {          <!-- Replace with X icon -->          <img src="images/x-icon.svg" alt="X" class="mr-2 w-3">        }        {{topic.title}}      </button>    }  </div>  <!-- Learning Preferences Form -->  <h1 class="text-2xl font-medium">Learning Style</h1>  <form #form="ngForm" class="flex flex-col w-2/4">    <label class="text-gray-700 my-2">How would you like this lesson to be?</label>    <textarea      type="text"       name="learningStyle"       placeholder="This helps Maestro tailor the content delivery to your unique style, you can provide your custom instructions here."       class="bg-gray-50 p-4 rounded-lg border border-2 h-48 text-sm"       [(ngModel)]="learningStyle"      required      learningStyle      #learningStyleCtrl="ngModel"      [disabled]="loading"    ></textarea>    <!-- Error messages -->    @if (learningStyleCtrl.invalid && learningStyleCtrl.touched) {      <div class="text-red-500 text-sm mt-1">        <span>Learning Style is required</span>      </div>    }    <button      type="submit"       class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm my-4"       (click)="onSubmit()"      [disabled]="loading"    >      Next      <img src="images/next-icon.svg" alt="" class="w-3 ml-2">    </button>  </form></div></div>'
-    var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><app-header></app-header><div class="flex flex-col w-full px-32">  <!-- Creation Tab Header -->  <div class="flex flex-row mb-8">    <app-creation-step-tab      [text]="\'My Subject and Materials\'"      [icon]="\'images/subject-icon.svg\'"      [active]="true"      class="w-2/6"    />    <app-creation-step-tab      [text]="\'Lesson Content Generation\'"      [icon]="\'images/lesson-generation-icon.svg\'"      [active]="true"      class="w-2/6"    />    <app-creation-step-tab      [text]="\'Practice Question Generation\'"      [icon]="\'images/question-generation-icon.svg\'"      [active]="false"      class="w-2/6"    />  </div>  <h1 class="text-2xl mb-2 font-medium">Create Your Personalized Lesson</h1>  <p class="mb-4 text-gray-600">    Select the specific topics from your document that you want Maestro to focus on for your lesson.  </p>  <!-- Topic List -->  <div class="flex flex-row flex-wrap mb-16">    @for (topic of topics; track topic.id) {      <button        [class]="\'flex flex-row rounded-full py-4 px-6 text-sm text-white mx-2 my-1 transition duration-300 ease-in-out \' + ( topic.selected? \'bg-prussian-blue-900\' : \'bg-gray-500\')"        (click)="toggleTopicSelection(topic.id)"        [disabled]="loading"      >        @if (topic.selected) {          <!-- Replace with X icon -->          <img src="images/x-icon.svg" alt="X" class="mr-2 w-3">        }        {{topic.title}}      </button>    }  </div>  <!-- Learning Preferences Form -->  <h1 class="text-2xl font-medium">Learning Style</h1>  <form #form="ngForm" class="flex flex-col w-2/4">    <label class="text-gray-700 my-2">How would you like this lesson to be?</label>    <textarea      type="text"       name="learningStyle"       placeholder="This helps Maestro tailor the content delivery to your unique style, you can provide your custom instructions here."       class="bg-gray-50 p-4 rounded-lg border border-2 h-48 text-sm"       [(ngModel)]="learningStyle"      required      learningStyle      #learningStyleCtrl="ngModel"      [disabled]="loading"    ></textarea>    <!-- Error messages -->    @if (learningStyleCtrl.invalid && learningStyleCtrl.touched) {      <div class="text-red-500 text-sm mt-1">        <span>Learning Style is required</span>      </div>    }    <div class="flex flex-row items-center">      <button        type="submit"         class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm my-4"         (click)="onSubmit()"        [disabled]="loading"      >        Next        <img src="images/next-icon.svg" alt="" class="w-3 ml-2">      </button>      <div [class]="`flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">        <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">        loading...      </div>    </div>  </form></div></div>'
+    var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'TopicPreferences'};
 </script>
