--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -62,8 +62,8 @@
         class="hidden"
         multiple
       />
-      <p class="text-gray-600 text-sm text-center">Upload your PDFs and DOCX files here to start generating personalized lessons for this subject.</p>
-      <p class="text-gray-400 text-xs my-2 text-center">JPG, PNG, PDF. Max file size: 25MB.</p>
+      <p class="text-gray-600 text-sm text-center">Upload your PDF, PPTX, and DOCX files here to start generating personalized lessons for this subject.</p>
+      <p class="text-gray-400 text-xs my-2 text-center">PDF, PPTX, DOC, DOCX. Max file size: 20MB.</p>
     </div>
 
     <!-- Show selected files -->
