--- a/src/app/pages/home/contact/contact.html
+++ b/src/app/pages/home/contact/contact.html
@@ -1,5 +1,5 @@
 <!-- Main Footer Container-->
-<footer class="bg-[#002D4B] py-20 text-white">
+<footer class="bg-prussian-blue-900 py-20 text-white">
   <!-- wrapper to make it look good -->
   <div class="container mx-auto px-4 lg:px-8">
     <!-- div for footer elements-->
