--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -63,7 +63,7 @@
         multiple
       />
       <p class="text-gray-600 text-sm text-center">Upload your PDF, PPTX, and DOCX files here to start generating personalized lessons for this subject.</p>
-      <p class="text-gray-400 text-xs my-2 text-center">PDF, PPTX, DOC, DOCX. Max file size: 20MB.</p>
+      <p class="text-gray-400 text-xs my-2 text-center">PDF, PPTX, DOC, DOCX. Max file size: 20MB. Max total files size: 50MB. Maximum of 15 files.</p>
     </div>
 
     <!-- Show selected files -->
