--- a/src/app/pages/not-found/not-found.html
+++ b/src/app/pages/not-found/not-found.html
@@ -1,7 +1,7 @@
 <div class="absolute top-0 w-full text-white">
-  Hey there cheeky mate. What do you think you're doing here? Get back to learning!
-  Also you might have noticed the sideways scrollable landing page, weird innit? It's a feature not a bug, I swear.
-  Anyways, it just goes to show that you can take the bug out of the code, but you can never take the code out of the bug ;)
+  Hey there mate. What do you think you're doing here? Get back to learning!
+  Also you might have noticed the sideways scrollable landing page, weird innit? Oh... you didn't? Because it was patched out? Well that's no fun :(
+  Anyways, just keep in mind that you can take the bug out of the code, but you can never take the code out of the bug ;)
 </div>
 <div class="h-screen flex flex-col justify-center">
   <div class="flex flex-row items-center justify-center">
